load data from api

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+
+    <!-- script -->
     <script src="./js/script.js"></script>
 
 </body>
