load data form api

--- a/index.html
+++ b/index.html
@@ -11,6 +11,49 @@
 </head>
 <body>
 
+    <nav class="navbar d-flex">
+        <div class="nav-brand d-flex">
+            <img src="./assets/logo-white.png" alt="logo" class="logo-img">
+            <h1>Portal Otomatis</h1>
+        </div>
+        <a href="#" class="nav-link">Laporan</a>
+    </nav>
+
+    <main class="container d-flex">
+        <div class="col-6">
+            <h3>Portal Masuk</h3>
+            <table class="table" id="table">
+                <thead>
+                    <tr>
+                        <th width="5%">#</th>
+                        <th width="40%">Nama Lengkap</th>
+                        <th width="20%">Kompi</th>
+                        <th width="35%">Waktu</th>
+                    </tr>
+                </thead>
+                <tbody id="tbody"></tbody>
+            </table>
+        </div>
+        <div class="col-6">
+            <h3>Portal Keluar</h3>
+            <table class="table" id="table">
+                <thead>
+                    <tr>
+                        <th width="5%">#</th>
+                        <th width="40%">Nama Lengkap</th>
+                        <th width="20%">Kompi</th>
+                        <th width="35%">Waktu</th>
+                    </tr>
+                </thead>
+                <tbody id="tbody"></tbody>
+            </table>
+        </div>
+    </main>
+
+    <section class="sidebar">
+        <p>tes</p>
+    </section>
+
     <!-- script -->
     <script src="./js/script.js"></script>
 
