--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
             <img src="./assets/logo-white.png" alt="logo" class="logo-img">
             <h1>Portal Otomatis</h1>
         </div>
-        <a href="#" class="nav-link report"><i class="bi bi-file-earmark-text-fill"></i> Laporan</a>
+        <div class="d-flex link">
+            <div class="dropdown click">
+                <a href="#" class="nav-link"><i class="bi bi-pencil-square"></i> Input Manual</a>
+
+                <section class="drop-link input">
+                    <a href="#" class="masuk"><i class="bi bi-box-arrow-in-right"></i> Portal Masuk</a>
+                    <a href="#" class="keluar"><i class="bi bi-box-arrow-left"></i> Portal Keluar</a>
+                </section>
+            </div>
+            <a href="#" class="nav-link report"><i class="bi bi-file-earmark-text-fill"></i> Laporan</a>
+        </div>
     </nav>
 
     <main class="container d-flex">
@@ -32,7 +42,7 @@
                         <th width="35%">Waktu</th>
                     </tr>
                 </thead>
-                <tbody id="tbody"></tbody>
+                <tbody id="tbody-in"></tbody>
             </table>
         </div>
         <div class="col-6">
@@ -46,7 +56,7 @@
                         <th width="35%">Waktu</th>
                     </tr>
                 </thead>
-                <tbody id="tbody"></tbody>
+                <tbody id="tbody-out"></tbody>
             </table>
         </div>
     </main>
@@ -54,6 +64,39 @@
     <section class="sidebar">
         <p>tes</p>
         <i class="bi bi-x-lg close"></i>
+        <button type="submit" class="generate">Download</button>
+    </section>
+
+    <section class="modal-masuk modal">
+        <form>
+            <div class="header-modal">
+                <h3>Portal Masuk</h3>
+                <i class="bi bi-x-lg close-modal"></i>
+            </div>
+            <label for="nama">Nama Lengkap 
+                <input type="text" name="nama" id="nama" value="">
+            </label>
+            <label for="kompi">Kompi / Asal 
+                <input type="text" name="kompi" id="kompi" value="">
+            </label>
+            <button>KIRIM</button>
+        </form>
+    </section>
+
+    <section class="modal-keluar modal">
+        <form action="" method="post">
+            <div class="header-modal">
+                <h3>Portal Keluar</h3>
+                <i class="bi bi-x-lg close-modal"></i>
+            </div>
+            <label for="nama">Nama Lengkap 
+                <input type="text" name="nama" id="nama1">
+            </label>
+            <label for="kompi">Kompi / Asal 
+                <input type="text" name="kompi" id="kompi1">
+            </label>
+            <button type="submit">KIRIM</button>
+        </form>
     </section>
 
     <!-- script -->
